chore: prepare config, code and docs for demo readiness